CSS overflow fixes for mobile

--- a/app/preview_export/css/themes/default-reset.css
+++ b/app/preview_export/css/themes/default-reset.css
@@ -206,7 +206,7 @@
 
 .themedArea {
 	text-align: center;
-	padding: 20px 0px;
+	padding: 20px 0px 0px;
 	line-height: 1.2em;
 	font-weight: normal;
 }
